// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Button Matches snapshot when array prop "items" has one item: "[object Object]" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <ForwardRef>
    jest-auto-snapshots String Fixture
  </ForwardRef>
  <ForwardRef
    alt="loading"
    src="./images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when array prop "items" is an empty array: "[]" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <ForwardRef>
    jest-auto-snapshots String Fixture
  </ForwardRef>
  <ForwardRef
    alt="loading"
    src="./images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  disabled={false}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  isSplit={true}
  onClick={[MockFunction]}
  size="small"
  type="link"
>
  <NodeFixture />
  <ForwardRef>
    jest-auto-snapshots String Fixture
  </ForwardRef>
  <ForwardRef
    alt="loading"
    src="./images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "fullWidth" is set to: "false" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={false}
  hasIconOnly={true}
  icon={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <ForwardRef>
    jest-auto-snapshots String Fixture
  </ForwardRef>
  <ForwardRef
    alt="loading"
    src="./images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "hasIconOnly" is set to: "false" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={false}
  icon={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <ForwardRef
    hasIcon={true}
  >
    jest-auto-snapshots String Fixture
  </ForwardRef>
  <ForwardRef
    alt="loading"
    src="./images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "isSelect" is set to: "false" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <ForwardRef>
    jest-auto-snapshots String Fixture
  </ForwardRef>
  <ForwardRef
    alt="loading"
    src="./images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "isSplit" is set to: "false" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  isSplit={false}
  size="small"
  type="link"
>
  <NodeFixture />
  <ForwardRef>
    jest-auto-snapshots String Fixture
  </ForwardRef>
  <ForwardRef
    alt="loading"
    src="./images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "loading" is set to: "false" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <ForwardRef>
    jest-auto-snapshots String Fixture
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when passed all props 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <ForwardRef>
    jest-auto-snapshots String Fixture
  </ForwardRef>
  <ForwardRef
    alt="loading"
    src="./images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when passed only required props 1`] = `
<ForwardRef
  disabled={false}
  fullWidth={false}
  hasIconOnly={false}
  onClick={[MockFunction]}
  size="medium"
  type="secondary"
>
  <ForwardRef
    hasIcon={false}
  />
</ForwardRef>
`;
